--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@auth/sveltekit": "^0.10.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@prisma/client": "^5.9.0",
+    "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "8.56.0",
+    "@types/node": "^20.11.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
@@ -26,6 +31,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "lucide-svelte": "^0.319.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.1",
@@ -36,11 +42,9 @@
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
   },
-  "type": "module",
-  "dependencies": {
-    "@prisma/client": "5.6.0"
-  }
+  "type": "module"
 }
