--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "@auth/sveltekit": "^0.10.0",
-    "@prisma/client": "^5.9.0",
+    "@iconify/svelte": "^3.1.6",
+    "@prisma/client": "^5.9.1-dev.1",
+    "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -26,18 +28,18 @@
     "@types/node": "^20.11.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vite-pwa/sveltekit": "^0.3.0",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "lucide-svelte": "^0.319.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.9.0",
+    "prisma": "^5.9.1-dev.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.6",
