--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "prisma": "^5.9.1-dev.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "sveltekit-superforms": "^1.13.4",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "zod": "^3.22.4"
   },
   "type": "module"
 }
