--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prisma": "^5.9.1-dev.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "sveltekit-i18n": "^2.4.2",
     "sveltekit-superforms": "^1.13.4",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
