--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
   "devDependencies": {
     "@auth/sveltekit": "^0.10.0",
     "@iconify/svelte": "^3.1.6",
-    "@prisma/client": "^5.9.1-dev.1",
+    "@prisma/client": "^5.9.1",
     "@sveltejs/adapter-node": "^4.0.1",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/kit": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "8.56.0",
-    "@types/node": "^20.11.13",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/node": "^20.11.18",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vite-pwa/sveltekit": "^0.3.0",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.20",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "moment": "^2.30.1",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.9.1-dev.1",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
+    "postcss": "^8.4.35",
+    "postcss-load-config": "^5.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.9.1",
+    "svelte": "^4.2.10",
+    "svelte-check": "^3.6.4",
     "sveltekit-superforms": "^1.13.4",
-    "tailwindcss": "^3.3.6",
-    "tslib": "^2.4.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
+    "tailwindcss": "^3.4.1",
+    "tslib": "^2.6.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.2",
     "zod": "^3.22.4"
   },
   "type": "module"
