--- a/package.json
+++ b/package.json
@@ -6,20 +6,16 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "prisma generate && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write . && eslint . --fix"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
   "devDependencies": {
     "@auth/sveltekit": "^0.10.0",
     "@iconify/svelte": "^3.1.6",
-    "@prisma/client": "^5.9.1",
     "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.5.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
@@ -32,16 +28,19 @@
     "@vite-pwa/sveltekit": "^0.3.0",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.7.2",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.29.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "moment": "^2.30.1",
+    "pg": "^8.11.3",
     "postcss": "^8.4.35",
     "postcss-load-config": "^5.0.3",
+    "postgres": "^3.4.3",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.9.1",
     "svelte": "^4.2.10",
     "svelte-check": "^3.6.4",
     "sveltekit-superforms": "^1.13.4",
