--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   database:
-    image: postgres:latest
+    image: postgres:16
     restart: always
     ports:
       - 5432:5432
