--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "svelte": "^4.2.10",
     "svelte-check": "^3.6.4",
+    "sveltekit-i18n": "^2.4.2",
     "sveltekit-superforms": "^1.13.4",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
